--- a/Project1.vcxproj
+++ b/Project1.vcxproj
@@ -135,13 +135,18 @@
     <ClCompile Include="game.cpp" />
     <ClCompile Include="pong.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="sdl_keyboard_input.cpp" />
     <ClCompile Include="sdl_renderer.cpp" />
     <ClCompile Include="sdl_window.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="game.h" />
+    <ClInclude Include="geometry.h" />
+    <ClInclude Include="input.h" />
+    <ClInclude Include="keyboard_input.h" />
     <ClInclude Include="pong.h" />
     <ClInclude Include="renderer.h" />
+    <ClInclude Include="sdl_keyboard_input.h" />
     <ClInclude Include="sdl_renderer.h" />
     <ClInclude Include="sdl_window.h" />
     <ClInclude Include="window.h" />
