--- a/Project1.vcxproj.filters
+++ b/Project1.vcxproj.filters
@@ -13,57 +13,102 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="engine">
+      <UniqueIdentifier>{6ed43282-37f1-496b-8c4f-ef118471508d}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="sdl_engine">
+      <UniqueIdentifier>{7d0c3de4-4080-4747-8a29-0e5d00c4758d}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="game.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="sdl_window.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="pong.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="sdl_renderer.cpp">
-      <Filter>Source Files</Filter>
+    <ClCompile Include="sdl_engine\sdl_font.cpp">
+      <Filter>sdl_engine</Filter>
     </ClCompile>
-    <ClCompile Include="sdl_keyboard_input.cpp">
-      <Filter>Source Files</Filter>
+    <ClCompile Include="sdl_engine\sdl_keyboard_input.cpp">
+      <Filter>sdl_engine</Filter>
+    </ClCompile>
+    <ClCompile Include="sdl_engine\sdl_renderer.cpp">
+      <Filter>sdl_engine</Filter>
+    </ClCompile>
+    <ClCompile Include="sdl_engine\sdl_texture.cpp">
+      <Filter>sdl_engine</Filter>
+    </ClCompile>
+    <ClCompile Include="sdl_engine\sdl_window.cpp">
+      <Filter>sdl_engine</Filter>
+    </ClCompile>
+    <ClCompile Include="engine\game.cpp">
+      <Filter>engine</Filter>
+    </ClCompile>
+    <ClCompile Include="sdl_game.cpp">
+      <Filter>sdl_engine</Filter>
+    </ClCompile>
+    <ClCompile Include="sdl_game_timer.cpp">
+      <Filter>sdl_engine</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="game.h">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="engine\color.h">
+      <Filter>engine</Filter>
     </ClInclude>
-    <ClInclude Include="window.h">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="engine\font.h">
+      <Filter>engine</Filter>
     </ClInclude>
-    <ClInclude Include="pong.h">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="engine\game.h">
+      <Filter>engine</Filter>
     </ClInclude>
-    <ClInclude Include="sdl_window.h">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="engine\geometry.h">
+      <Filter>engine</Filter>
     </ClInclude>
-    <ClInclude Include="renderer.h">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="engine\input.h">
+      <Filter>engine</Filter>
     </ClInclude>
-    <ClInclude Include="sdl_renderer.h">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="engine\keyboard_input.h">
+      <Filter>engine</Filter>
     </ClInclude>
-    <ClInclude Include="geometry.h">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="engine\renderer.h">
+      <Filter>engine</Filter>
     </ClInclude>
-    <ClInclude Include="keyboard_input.h">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="engine\texture.h">
+      <Filter>engine</Filter>
     </ClInclude>
-    <ClInclude Include="sdl_keyboard_input.h">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="engine\window.h">
+      <Filter>engine</Filter>
     </ClInclude>
-    <ClInclude Include="input.h">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="sdl_engine\sdl_adaptor.h">
+      <Filter>sdl_engine</Filter>
+    </ClInclude>
+    <ClInclude Include="sdl_engine\sdl_converter.h">
+      <Filter>sdl_engine</Filter>
+    </ClInclude>
+    <ClInclude Include="sdl_engine\sdl_font.h">
+      <Filter>sdl_engine</Filter>
+    </ClInclude>
+    <ClInclude Include="sdl_engine\sdl_keyboard_input.h">
+      <Filter>sdl_engine</Filter>
+    </ClInclude>
+    <ClInclude Include="sdl_engine\sdl_renderer.h">
+      <Filter>sdl_engine</Filter>
+    </ClInclude>
+    <ClInclude Include="sdl_engine\sdl_texture.h">
+      <Filter>sdl_engine</Filter>
+    </ClInclude>
+    <ClInclude Include="sdl_engine\sdl_window.h">
+      <Filter>sdl_engine</Filter>
+    </ClInclude>
+    <ClInclude Include="actor.h">
+      <Filter>engine</Filter>
+    </ClInclude>
+    <ClInclude Include="game_timer.h">
+      <Filter>engine</Filter>
+    </ClInclude>
+    <ClInclude Include="sdl_game_timer.h">
+      <Filter>sdl_engine</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
